--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,13 @@
-sentence-transformers==2.2.2
-langchain
+sentence-transformers==3.2.1
+langchain==0.3.7
 flask
 pypdf
 python-dotenv
 pinecone[grpc]
-langchain-pinecone
-langchain_community
-langchain_openai
-langchain_experimental
+langchain-community==0.3.5
+langchain-core==0.3.15
+langchain-experimental==0.3.2
+langchain-huggingface==0.1.2
+langchain-openai==0.2.5
+langchain-pinecone==0.2.0
 -e .
